// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package.json exports support > should build app package for both web and native targets > native-optimized 1`] = `
"import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <__TamaguiNativeView style={__TamaguiNativeStyle658._ ?? __TamaguiNativeStyle658()}>
      <__TamaguiNativeView style={__TamaguiNativeStyle681._ ?? __TamaguiNativeStyle681()}  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__TamaguiNativeView>

      <__TamaguiNativeView style={__TamaguiNativeStyle890._ ?? __TamaguiNativeStyle890()}  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__TamaguiNativeView>
    </__TamaguiNativeView>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={__TamaguiNativeStyle2277._ ?? __TamaguiNativeStyle2277()}>
            <ChevronUp size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <__TamaguiNativeView
              style={__TamaguiNativeStyle3703._ ?? __TamaguiNativeStyle3703()}







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </__TamaguiNativeView>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={__TamaguiNativeStyle4269._ ?? __TamaguiNativeStyle4269()}>
            <ChevronDown size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <__TamaguiStableView5363      >
      <XStack
        position="absolute sm:relative"
        width="100%"
        t="6 sm:0px"
        gap="6"
        justify="center"
        flexWrap="wrap"
      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </XStack>

      <SelectDemo />

      <__TamaguiNativeView style={__TamaguiNativeStyle5822._ ?? __TamaguiNativeStyle5822()}>
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__TamaguiNativeView>
      <__TamaguiNativeView style={__TamaguiNativeStyle6083._ ?? __TamaguiNativeStyle6083()}>
        <__TamaguiStableText6108  >
          Welcome to Tamagui.
        </__TamaguiStableText6108>
        <__TamaguiStableText6195  >
          Here's a basic starter to show navigating from one screen to another.
        </__TamaguiStableText6195>
        <__TamaguiStableView6346 />
        <__TamaguiStableText6368 >
          This screen uses the same code on Next.js and React Native.
        </__TamaguiStableText6368>
        <__TamaguiStableView6493 />
      </__TamaguiNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </__TamaguiStableView5363>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <__TamaguiNativeView style={__TamaguiNativeStyle7400._ ?? __TamaguiNativeStyle7400()}>
            <__TamaguiStableText7429 >Made by</__TamaguiStableText7429>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </__TamaguiNativeView>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}

function __TamaguiNativeStyle658() { return __TamaguiNativeStyle658._ ?? (__TamaguiNativeStyle658._ = {"flexDirection":"column","gap":16}); } __TamaguiNativeStyle658();
const __TamaguiNativeView = require('react-native').View;
function __TamaguiNativeStyle681() { return __TamaguiNativeStyle681._ ?? (__TamaguiNativeStyle681._ = {"flexDirection":"row","width":"100%","alignItems":"center","gap":16}); } __TamaguiNativeStyle681();
function __TamaguiNativeStyle890() { return __TamaguiNativeStyle890._ ?? (__TamaguiNativeStyle890._ = {"flexDirection":"row","width":"100%","alignItems":"center","gap":16}); } __TamaguiNativeStyle890();
function __TamaguiNativeStyle2277() { return __TamaguiNativeStyle2277._ ?? (__TamaguiNativeStyle2277._ = {"flexDirection":"column","zIndex":10}); } __TamaguiNativeStyle2277();
function __TamaguiNativeStyle3703() { return __TamaguiNativeStyle3703._ ?? (__TamaguiNativeStyle3703._ = {"flexDirection":"column","position":"absolute","right":0,"top":0,"bottom":0,"alignItems":"center","justifyContent":"center","width":16,"pointerEvents":"none"}); } __TamaguiNativeStyle3703();
function __TamaguiNativeStyle4269() { return __TamaguiNativeStyle4269._ ?? (__TamaguiNativeStyle4269._ = {"flexDirection":"column","zIndex":10}); } __TamaguiNativeStyle4269();
function __TamaguiNativeStyle5363() { return __TamaguiNativeStyle5363._ ?? (__TamaguiNativeStyle5363._ = {"flexDirection":"column","flex":1,"justifyContent":"center","alignItems":"center","gap":32,"paddingTop":16,"paddingRight":16,"paddingBottom":16,"paddingLeft":16}); } __TamaguiNativeStyle5363();
const __TamaguiStableView5363 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle5363._ ?? __TamaguiNativeStyle5363(), { "backgroundColor": _theme["background"]?.get() }], true, false);
function __TamaguiNativeStyle5822() { return __TamaguiNativeStyle5822._ ?? (__TamaguiNativeStyle5822._ = {"flexDirection":"row","gap":8}); } __TamaguiNativeStyle5822();
function __TamaguiNativeStyle6083() { return __TamaguiNativeStyle6083._ ?? (__TamaguiNativeStyle6083._ = {"flexDirection":"column","gap":16}); } __TamaguiNativeStyle6083();
function __TamaguiNativeStyle6108() { return __TamaguiNativeStyle6108._ ?? (__TamaguiNativeStyle6108._ = {"textTransform":"none","fontFamily":"InterBold","letterSpacing":-3,"fontSize":46,"lineHeight":56,"marginTop":0,"marginRight":0,"marginBottom":0,"marginLeft":0,"textAlign":"center"}); } __TamaguiNativeStyle6108();
const __TamaguiNativeText = require('react-native').Text;
const __TamaguiStableText6108 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6108._ ?? __TamaguiNativeStyle6108(), { "color": _theme["color11"]?.get() }], true, false);
function __TamaguiNativeStyle6195() { return __TamaguiNativeStyle6195._ ?? (__TamaguiNativeStyle6195._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle6195();
const __TamaguiStableText6195 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6195._ ?? __TamaguiNativeStyle6195(), { "color": _theme["color10"]?.get() }], true, false);
function __TamaguiNativeStyle6346() { return __TamaguiNativeStyle6346._ ?? (__TamaguiNativeStyle6346._ = {"flexShrink":0,"borderStyle":"solid","borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"transform":[{"translateY":-0.5}]}); } __TamaguiNativeStyle6346();
const __TamaguiStableView6346 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle6346._ ?? __TamaguiNativeStyle6346(), { "borderTopColor": _theme["background-focus"]?.get(), "borderRightColor": _theme["background-focus"]?.get(), "borderBottomColor": _theme["background-focus"]?.get(), "borderLeftColor": _theme["background-focus"]?.get() }], true, false);
function __TamaguiNativeStyle6368() { return __TamaguiNativeStyle6368._ ?? (__TamaguiNativeStyle6368._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle6368();
const __TamaguiStableText6368 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6368._ ?? __TamaguiNativeStyle6368(), { "color": _theme["color"]?.get() }], true, false);
function __TamaguiNativeStyle6493() { return __TamaguiNativeStyle6493._ ?? (__TamaguiNativeStyle6493._ = {"flexShrink":0,"borderStyle":"solid","borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"transform":[{"translateY":-0.5}]}); } __TamaguiNativeStyle6493();
const __TamaguiStableView6493 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle6493._ ?? __TamaguiNativeStyle6493(), { "borderTopColor": _theme["background-focus"]?.get(), "borderRightColor": _theme["background-focus"]?.get(), "borderBottomColor": _theme["background-focus"]?.get(), "borderLeftColor": _theme["background-focus"]?.get() }], true, false);
function __TamaguiNativeStyle7400() { return __TamaguiNativeStyle7400._ ?? (__TamaguiNativeStyle7400._ = {"flexDirection":"row","gap":8}); } __TamaguiNativeStyle7400();
function __TamaguiNativeStyle7429() { return __TamaguiNativeStyle7429._ ?? (__TamaguiNativeStyle7429._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle7429();
const __TamaguiStableText7429 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle7429._ ?? __TamaguiNativeStyle7429(), { "color": _theme["color"]?.get() }], true, false);"
`;

exports[`Package.json exports support > should build app package for both web and native targets > web-css 1`] = `"._f-2057920087{flex-direction:column}._g-1921595432{gap:var(--c-space-4)}._f-1841970073{flex-direction:row}._w-1618192357{width:100%}._ai-687583239{align-items:center}._zi-497018304{z-index:10}._p-868240457{position:absolute}._i-933642581._i-933642581._i-933642581{right:0px}._i-933642581._i-933642581._i-933642581{top:0px}._i-933642581._i-933642581._i-933642581{bottom:0px}._jc-1909189881{justify-content:center}._w-359521787{width:var(--c-size-4)}._pe-1490611783{pointer-events:none}._pe-1490611783>*{pointer-events:none}._f-337534512{flex-direction:column}._f-337534512._f-337534512._f-337534512{flex:1 0px}._g-1921595556{gap:var(--c-space-8)}._p-373321373{padding:var(--c-space-4)}._b-41027194{background-color:var(--background)}._f-1135793{flex-direction:row}._f-1135793._f-1135793._f-1135793{flex-wrap:wrap}._p-949456293{position:absolute}@media (min-width: 640px) {._p-949456293{position:relative}}._i-469006035{top:var(--c-space-6)}@media (min-width: 640px) {._i-469006035{top:0px}}._g-1921595494{gap:var(--c-space-6)}._g-1921595370{gap:var(--c-space-2)}._us-601593343{user-select:auto;-webkit-user-select:auto;}._ws-974065937{white-space:normal}._tt-2008973254{text-transform:var(--f-transform-8)}._ff-163417665{font-family:var(--f-family)}._fw-1746808431{font-weight:var(--f-weight-10)}._ls-1762537288{letter-spacing:var(--f-letterSpacing-10)}._fs-1530099841{font-size:var(--f-size-10)}._lh-1535216966{line-height:var(--f-lineHeight-10)}._m-2017216831{margin:0px}._ta-1579476152{text-align:center}._c-1849059509{color:var(--color11)}._fw-333443408{font-weight:var(--f-weight-4)}._ls-888140119{letter-spacing:var(--f-letterSpacing-4)}._fs-2127568126{font-size:var(--f-size-4)}._lh-465165209{line-height:var(--f-lineHeight-4)}._c-1849059478{color:var(--color10)}:where(._t-compose){--t-x:0px;--t-y:0px}._t-compose{translate:var(--t-x, 0px) var(--t-y, 0px)}._f-1691251864{flex-shrink:0}._f-1691251864{flex:1 0px}._b-1161078938{border-style:solid}._b-1161078938{border-width:0px}._b-1161078938{border-bottom-style:solid}._b-1161078938{border-bottom-width:1px}._b-1161078938{border-color:var(--background-focus)}._h-1922296922{height:0px}._mh-519501952{max-height:0px}._ty-79275713{--t-y:-0.5px}._c-1996280471{color:var(--color)}"`;

exports[`Package.json exports support > should build app package for both web and native targets > web-optimized 1`] = `
"import "./_screen.css"
import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <div className="is_View _f-2057920087 _g-1921595432">
      <div className="is_View _f-1841970073 _w-1618192357 _ai-687583239 _g-1921595432"  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className="is_View _f-1841970073 _w-1618192357 _ai-687583239 _g-1921595432"  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _f-2057920087 _zi-497018304">
            <ChevronUp size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <div
              className="is_View _f-2057920087 _p-868240457 _i-933642581 _ai-687583239 _jc-1909189881 _w-359521787 _pe-1490611783"







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </div>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _f-2057920087 _zi-497018304">
            <ChevronDown size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <div className="is_View _f-337534512 _jc-1909189881 _ai-687583239 _g-1921595556 _p-373321373 _b-41027194"     >
      <div
        className="is_View _f-1135793 _p-949456293 _w-1618192357 _i-469006035 _g-1921595494 _jc-1909189881"





      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </div>

      <SelectDemo />

      <div className="is_View _f-1841970073 _g-1921595370">
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className="is_View _f-2057920087 _g-1921595432">
        <h1 className="is_Text font_heading tm-paragraph _us-601593343 _ws-974065937 _tt-2008973254 _ff-163417665 _fw-1746808431 _ls-1762537288 _fs-1530099841 _lh-1535216966 _m-2017216831 _ta-1579476152 _c-1849059509" >
          Welcome to Tamagui.
        </h1>
        <p className="is_Text font_body tm-paragraph _ff-163417665 _fw-333443408 _ls-888140119 _fs-2127568126 _lh-465165209 _us-601593343 _ws-974065937 _c-1849059478 _ta-1579476152" >
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className="is_View _t-compose _f-1691251864 _b-1161078938 _h-1922296922 _mh-519501952 _ty-79275713" />
        <p className="is_Text font_body tm-paragraph _ff-163417665 _fw-333443408 _ls-888140119 _fs-2127568126 _lh-465165209 _us-601593343 _c-1996280471 _ws-974065937 _ta-1579476152">
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className="is_View _t-compose _f-1691251864 _b-1161078938 _h-1922296922 _mh-519501952 _ty-79275713" />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <div className="is_View _f-1841970073 _g-1921595370">
            <p className="is_Text font_body tm-paragraph _ff-163417665 _fw-333443408 _ls-888140119 _fs-2127568126 _lh-465165209 _us-601593343 _c-1996280471 _ws-974065937 _ta-1579476152">Made by</p>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </div>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}
"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > native-optimized-single 1`] = `
"import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <__TamaguiNativeView style={__TamaguiNativeStyle658._ ?? __TamaguiNativeStyle658()}>
      <__TamaguiNativeView style={__TamaguiNativeStyle681._ ?? __TamaguiNativeStyle681()}  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__TamaguiNativeView>

      <__TamaguiNativeView style={__TamaguiNativeStyle890._ ?? __TamaguiNativeStyle890()}  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__TamaguiNativeView>
    </__TamaguiNativeView>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={__TamaguiNativeStyle2277._ ?? __TamaguiNativeStyle2277()}>
            <ChevronUp size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <__TamaguiNativeView
              style={__TamaguiNativeStyle3703._ ?? __TamaguiNativeStyle3703()}







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </__TamaguiNativeView>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={__TamaguiNativeStyle4269._ ?? __TamaguiNativeStyle4269()}>
            <ChevronDown size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <__TamaguiStableView5363      >
      <XStack
        position="absolute sm:relative"
        width="100%"
        t="6 sm:0px"
        gap="6"
        justify="center"
        flexWrap="wrap"
      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </XStack>

      <SelectDemo />

      <__TamaguiNativeView style={__TamaguiNativeStyle5822._ ?? __TamaguiNativeStyle5822()}>
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__TamaguiNativeView>
      <__TamaguiNativeView style={__TamaguiNativeStyle6083._ ?? __TamaguiNativeStyle6083()}>
        <__TamaguiStableText6108  >
          Welcome to Tamagui.
        </__TamaguiStableText6108>
        <__TamaguiStableText6195  >
          Here's a basic starter to show navigating from one screen to another.
        </__TamaguiStableText6195>
        <__TamaguiStableView6346 />
        <__TamaguiStableText6368 >
          This screen uses the same code on Next.js and React Native.
        </__TamaguiStableText6368>
        <__TamaguiStableView6493 />
      </__TamaguiNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </__TamaguiStableView5363>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <__TamaguiNativeView style={__TamaguiNativeStyle7400._ ?? __TamaguiNativeStyle7400()}>
            <__TamaguiStableText7429 >Made by</__TamaguiStableText7429>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </__TamaguiNativeView>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}

function __TamaguiNativeStyle658() { return __TamaguiNativeStyle658._ ?? (__TamaguiNativeStyle658._ = {"flexDirection":"column","gap":16}); } __TamaguiNativeStyle658();
const __TamaguiNativeView = require('react-native').View;
function __TamaguiNativeStyle681() { return __TamaguiNativeStyle681._ ?? (__TamaguiNativeStyle681._ = {"flexDirection":"row","width":"100%","alignItems":"center","gap":16}); } __TamaguiNativeStyle681();
function __TamaguiNativeStyle890() { return __TamaguiNativeStyle890._ ?? (__TamaguiNativeStyle890._ = {"flexDirection":"row","width":"100%","alignItems":"center","gap":16}); } __TamaguiNativeStyle890();
function __TamaguiNativeStyle2277() { return __TamaguiNativeStyle2277._ ?? (__TamaguiNativeStyle2277._ = {"flexDirection":"column","zIndex":10}); } __TamaguiNativeStyle2277();
function __TamaguiNativeStyle3703() { return __TamaguiNativeStyle3703._ ?? (__TamaguiNativeStyle3703._ = {"flexDirection":"column","position":"absolute","right":0,"top":0,"bottom":0,"alignItems":"center","justifyContent":"center","width":16,"pointerEvents":"none"}); } __TamaguiNativeStyle3703();
function __TamaguiNativeStyle4269() { return __TamaguiNativeStyle4269._ ?? (__TamaguiNativeStyle4269._ = {"flexDirection":"column","zIndex":10}); } __TamaguiNativeStyle4269();
function __TamaguiNativeStyle5363() { return __TamaguiNativeStyle5363._ ?? (__TamaguiNativeStyle5363._ = {"flexDirection":"column","flex":1,"justifyContent":"center","alignItems":"center","gap":32,"paddingTop":16,"paddingRight":16,"paddingBottom":16,"paddingLeft":16}); } __TamaguiNativeStyle5363();
const __TamaguiStableView5363 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle5363._ ?? __TamaguiNativeStyle5363(), { "backgroundColor": _theme["background"]?.get() }], true, false);
function __TamaguiNativeStyle5822() { return __TamaguiNativeStyle5822._ ?? (__TamaguiNativeStyle5822._ = {"flexDirection":"row","gap":8}); } __TamaguiNativeStyle5822();
function __TamaguiNativeStyle6083() { return __TamaguiNativeStyle6083._ ?? (__TamaguiNativeStyle6083._ = {"flexDirection":"column","gap":16}); } __TamaguiNativeStyle6083();
function __TamaguiNativeStyle6108() { return __TamaguiNativeStyle6108._ ?? (__TamaguiNativeStyle6108._ = {"textTransform":"none","fontFamily":"InterBold","letterSpacing":-3,"fontSize":46,"lineHeight":56,"marginTop":0,"marginRight":0,"marginBottom":0,"marginLeft":0,"textAlign":"center"}); } __TamaguiNativeStyle6108();
const __TamaguiNativeText = require('react-native').Text;
const __TamaguiStableText6108 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6108._ ?? __TamaguiNativeStyle6108(), { "color": _theme["color11"]?.get() }], true, false);
function __TamaguiNativeStyle6195() { return __TamaguiNativeStyle6195._ ?? (__TamaguiNativeStyle6195._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle6195();
const __TamaguiStableText6195 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6195._ ?? __TamaguiNativeStyle6195(), { "color": _theme["color10"]?.get() }], true, false);
function __TamaguiNativeStyle6346() { return __TamaguiNativeStyle6346._ ?? (__TamaguiNativeStyle6346._ = {"flexShrink":0,"borderStyle":"solid","borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"transform":[{"translateY":-0.5}]}); } __TamaguiNativeStyle6346();
const __TamaguiStableView6346 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle6346._ ?? __TamaguiNativeStyle6346(), { "borderTopColor": _theme["background-focus"]?.get(), "borderRightColor": _theme["background-focus"]?.get(), "borderBottomColor": _theme["background-focus"]?.get(), "borderLeftColor": _theme["background-focus"]?.get() }], true, false);
function __TamaguiNativeStyle6368() { return __TamaguiNativeStyle6368._ ?? (__TamaguiNativeStyle6368._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle6368();
const __TamaguiStableText6368 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6368._ ?? __TamaguiNativeStyle6368(), { "color": _theme["color"]?.get() }], true, false);
function __TamaguiNativeStyle6493() { return __TamaguiNativeStyle6493._ ?? (__TamaguiNativeStyle6493._ = {"flexShrink":0,"borderStyle":"solid","borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"transform":[{"translateY":-0.5}]}); } __TamaguiNativeStyle6493();
const __TamaguiStableView6493 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle6493._ ?? __TamaguiNativeStyle6493(), { "borderTopColor": _theme["background-focus"]?.get(), "borderRightColor": _theme["background-focus"]?.get(), "borderBottomColor": _theme["background-focus"]?.get(), "borderLeftColor": _theme["background-focus"]?.get() }], true, false);
function __TamaguiNativeStyle7400() { return __TamaguiNativeStyle7400._ ?? (__TamaguiNativeStyle7400._ = {"flexDirection":"row","gap":8}); } __TamaguiNativeStyle7400();
function __TamaguiNativeStyle7429() { return __TamaguiNativeStyle7429._ ?? (__TamaguiNativeStyle7429._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle7429();
const __TamaguiStableText7429 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle7429._ ?? __TamaguiNativeStyle7429(), { "color": _theme["color"]?.get() }], true, false);"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > web-optimized-single 1`] = `
"import "./_screen.css"
import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <div className="is_View _f-2057920087 _g-1921595432">
      <div className="is_View _f-1841970073 _w-1618192357 _ai-687583239 _g-1921595432"  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className="is_View _f-1841970073 _w-1618192357 _ai-687583239 _g-1921595432"  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _f-2057920087 _zi-497018304">
            <ChevronUp size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <div
              className="is_View _f-2057920087 _p-868240457 _i-933642581 _ai-687583239 _jc-1909189881 _w-359521787 _pe-1490611783"







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </div>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _f-2057920087 _zi-497018304">
            <ChevronDown size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <div className="is_View _f-337534512 _jc-1909189881 _ai-687583239 _g-1921595556 _p-373321373 _b-41027194"     >
      <div
        className="is_View _f-1135793 _p-949456293 _w-1618192357 _i-469006035 _g-1921595494 _jc-1909189881"





      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </div>

      <SelectDemo />

      <div className="is_View _f-1841970073 _g-1921595370">
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className="is_View _f-2057920087 _g-1921595432">
        <h1 className="is_Text font_heading tm-paragraph _us-601593343 _ws-974065937 _tt-2008973254 _ff-163417665 _fw-1746808431 _ls-1762537288 _fs-1530099841 _lh-1535216966 _m-2017216831 _ta-1579476152 _c-1849059509" >
          Welcome to Tamagui.
        </h1>
        <p className="is_Text font_body tm-paragraph _ff-163417665 _fw-333443408 _ls-888140119 _fs-2127568126 _lh-465165209 _us-601593343 _ws-974065937 _c-1849059478 _ta-1579476152" >
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className="is_View _t-compose _f-1691251864 _b-1161078938 _h-1922296922 _mh-519501952 _ty-79275713" />
        <p className="is_Text font_body tm-paragraph _ff-163417665 _fw-333443408 _ls-888140119 _fs-2127568126 _lh-465165209 _us-601593343 _c-1996280471 _ws-974065937 _ta-1579476152">
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className="is_View _t-compose _f-1691251864 _b-1161078938 _h-1922296922 _mh-519501952 _ty-79275713" />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <div className="is_View _f-1841970073 _g-1921595370">
            <p className="is_Text font_body tm-paragraph _ff-163417665 _fw-333443408 _ls-888140119 _fs-2127568126 _lh-465165209 _us-601593343 _c-1996280471 _ws-974065937 _ta-1579476152">Made by</p>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </div>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}
"
`;
